syntax = "proto3";

package reaction;

service ReactionService {
  rpc CreateReaction (CreatereactionArgs) returns (Reaction) {}
  rpc GetReaction (ReactionId) returns (Reaction) {}
  rpc UpdateReaction (UpdateReactionArgs) returns (Reaction) {}
  rpc DeleteReaction (ReactionId) returns (Reaction) {}
  rpc UpVote (VoteArgs) returns (Reaction);
  rpc DownVote (VoteArgs) returns (Reaction);
}

message VoteArgs {
  string userId = 1;
  string targetId = 2;
}

message ReactionId {
  string _id = 1;
}

message CreateReactionArgs {
  required string _id = 1;
  repeated string upVote = 3;
  repeated string downVote = 4;
  enum ReactionType {
    COMMENT = 0;
    POST = 1;
  }
  required ReactionType reactionType = 5;
}

message UpdateReactionArgs {
  required string _id = 1;
  repeated string upVote = 3;
  repeated string downVote = 4;
}

message Reaction {
  string _id = 1;
  repeated string upVote = 3;
  repeated string downVote = 4;
  ReactionType reactionType = 5;
}